[package]
description = "a tool to scrape images from a website while skip the duplicate ones"
edition = "2021"
exclude = ["/data", "*.json", "*.bin"]
license = "MIT"
name = "image_scrapper"
version = "0.3.2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
chrono = "0.4.28"
clap = {version = "4.4.1", features = ["derive"]}
eyre = "0.6.8"
md5 = "0.7.0"
regex = "1.9.4"
reqwest = {version = "0.11.20", default-features = false, features = ["native-tls", "cookies", "gzip"]}
reqwest_cookie_store = "0.6.0"
scraper = "0.17.1"
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.105"
tokio = {version = "1.32.0", features = ["rt", "test-util", "macros", "fs"]}
url = "2.4.1"
